fixed issue where roadmap margin was too much

--- a/components/Generic/Roadmap/roadmap.module.scss
+++ b/components/Generic/Roadmap/roadmap.module.scss
@@ -21,7 +21,7 @@ $roadmap-cell-gap: 0.5rem;
   // overflow-x: hidden;
   // margin: 20rem 0;
   // margin: 40vw 0 30vw 0;
-  margin-bottom: 10rem;
+  // margin-bottom: 10rem;
   // padding: 24rem 0 20rem 0;
 }
 
@@ -156,6 +156,6 @@ $roadmap-cell-gap: 0.5rem;
   }
 
   .roadmap {
-    margin-bottom: 20rem;
+    // margin-bottom: 8rem;
   }  
 }
